--- a/bower.json
+++ b/bower.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
   },
-  "main": "dist/crypto.min.js",
+  "main": "dist/wcrypto.min.js",
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:my-will/crypto.git"
+    "url": "git@bitbucket.org:my-will/wcrypto.git"
   },
   "author": "Eugene Valeyev",
   "license": "exclusive",
-  "homepage": "https://bitbucket.org/my-will/crypto#readme"
+  "homepage": "https://bitbucket.org/my-will/wcrypto#readme"
 }
