--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   },
   "scripts": {
   },
-  "main": "dist/crypto.js",
+  "main": "dist/wcrypto.js",
   "repository": {
     "type": "git",
-    "url": "git@bitbucket.org:my-will/crypto.git"
+    "url": "git@bitbucket.org:my-will/wcrypto.git"
   },
   "author": "Eugene Valeyev",
   "license": "exclusive",
-  "homepage": "https://bitbucket.org/my-will/crypto#readme"
+  "homepage": "https://bitbucket.org/my-will/wcrypto#readme"
 }
