--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "version": "0.1.0",
   "keywords": [],
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
-    "detect-browser": "^1.7.1",
     "bn.js": "^4.11.3",
     "create-hash": "^1.1.2",
+    "detect-browser": "^1.12.0",
     "elliptic": "^6.2.3"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "main": "dist/wcrypto.js",
   "repository": {
     "type": "git",
